--- a/AppServerWithSQL/DeployAppServerWithSQL.json
+++ b/AppServerWithSQL/DeployAppServerWithSQL.json
@@ -221,11 +221,11 @@
           "DiskConfigurationType": "NEW",
           "StorageWorkloadType": "General",
           "SQLDataSettings": {
-            "LUNs": "[int(0)]",
+            "LUNs": [0],
             "DefaultFilePath": "[variables('SQLDataPath')]"
           },
           "SQLLogSettings": {
-            "Luns": "[int(1)]",
+            "Luns": [1],
             "DefaultFilePath": "[variables('SQLLogPath')]"
           },
           "SQLTempDbSettings": {
