--- a/AppServerWithSQL/DeployAppServerWithSQL.json
+++ b/AppServerWithSQL/DeployAppServerWithSQL.json
@@ -69,7 +69,7 @@
         "APPNicIPAddress": "[concat(variables('AddressArray').value[0],'.',variables('AddressArray').value[1],'.',variables('AddressArray').value[2],'.130')]",
         "SQLDataPath": "F:\\Program Files\\Microsoft SQL Server\\Data",
         "SQLLogPath" : "L:\\Program Files\\Microsoft SQL Server\\Data",
-        "Quantity": "1",
+        "Quantity": 1,
         "DataDisksLuns": "[array(range(0 ,variables('Quantity')))]",
         "LogDisksLuns": "[array(range(variables('Quantity'), variables('Quantity')))]"
     },
